tests/error/misc_errors/return_flag.err
Error: Invalid annotation (at $FILE:12:13)
   | 
10 | 
11 | @guppy.declare(module)
12 | def foo() -> qubit @owned: ...
   |              ^^^^^^^^^^^^ `@` type annotations are not allowed in this position

Guppy compilation failed due to 1 previous error
